<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".MainActivity"
    android:background="#ff8c00"
    android:padding="0dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="207dp"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:id="@+id/textView_screen"
        android:background="#ffffff"
        android:layout_margin="0dp"
        android:gravity="bottom|right"
        android:textSize="70sp"
        android:nestedScrollingEnabled="false"
        android:maxLines="2"
        android:maxLength="17" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="7"
        android:id="@+id/btn7"
        android:layout_below="@+id/textView_screen"
        android:layout_alignLeft="@+id/textView_screen"
        android:layout_alignStart="@+id/textView_screen"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"

        android:maxWidth="90dp" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="8"
        android:id="@+id/btn8"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/textView_screen"
        android:layout_toRightOf="@+id/btn7"
        android:layout_toEndOf="@+id/btn7"

        android:maxWidth="90dp" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="9"
        android:id="@+id/btn9"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/textView_screen"
        android:layout_toRightOf="@+id/btn8"
        android:layout_toEndOf="@+id/btn8"

        android:maxWidth="90dp" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="4"
        android:id="@+id/btn4"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/btn7"
        android:layout_toLeftOf="@+id/btn5"
        android:layout_toStartOf="@+id/btn5"
        />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="5"
        android:id="@+id/btn5"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/btn8"
        android:layout_toRightOf="@+id/btn7"
        android:layout_toEndOf="@+id/btn7"
        />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="6"
        android:id="@+id/btn6"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/btn9"
        android:layout_toRightOf="@+id/btn5"
        android:layout_toEndOf="@+id/btn5"
        />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="1"
        android:id="@+id/btn1"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/btn4"
        android:layout_toLeftOf="@+id/btn5"
        android:layout_toStartOf="@+id/btn5"
        />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="2"
        android:id="@+id/btn2"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_alignTop="@+id/btn1"
        android:layout_toRightOf="@+id/btn1"
        android:layout_toEndOf="@+id/btn1"
        />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="3"
        android:id="@+id/btn3"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/btn6"
        android:layout_toRightOf="@+id/btn5"
        android:layout_toEndOf="@+id/btn5"
        />

    <Button
        android:layout_width="90dp"
        android:layout_height="200dp"
        android:text="."
        android:id="@+id/btnDot"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/btn1"
        android:layout_alignLeft="@+id/btn1"
        android:layout_alignStart="@+id/btn1"
        />

    <Button
        android:layout_width="90dp"
        android:layout_height="200dp"
        android:text="0"
        android:id="@+id/btn0"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/btn2"
        android:layout_toRightOf="@+id/btn1"
        android:layout_toEndOf="@+id/btn1"
        />

    <Button
        android:layout_width="90dp"
        android:layout_height="200dp"
        android:text="="
        android:id="@+id/btnEqual"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/btn3"
        android:layout_toRightOf="@+id/btn0"
        android:layout_toEndOf="@+id/btn0"
        />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="+"
        android:id="@+id/btnPlus"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#2acc5d"
        android:layout_below="@+id/textView_screen"
        android:layout_toRightOf="@+id/btn9"
        android:layout_toEndOf="@+id/btn9"

        android:maxWidth="90dp" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="-"
        android:id="@+id/btnMinus"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#2acc5d"
        android:layout_below="@+id/btnPlus"
        android:layout_toRightOf="@+id/btn9"
        />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="x"
        android:id="@+id/btnMult"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#2acc5d"
        android:layout_below="@+id/btnMinus"
        android:layout_toRightOf="@+id/btn9"
        />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="÷"
        android:id="@+id/btnDiv"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#2acc5d"
        android:layout_below="@+id/btnMult"
        android:layout_toRightOf="@+id/btn9"

        />

    <Button
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:text="DEL"
        android:id="@+id/btnClear"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#2acc5d"
        android:layout_below="@+id/btnDiv"
        android:layout_toRightOf="@+id/btnEqual"

        />


</RelativeLayout>